# raudius-graph

./: .env  Cargo.toml  README.md  build.rs  genGraphqlSchema.sh  genGraphqlStructs.sh  genSeaormEntities.sh  package-lock.json  package.json  scratchpad
gql/.openapi-generator/: FILES
gql/schemas/api/: playlists_api.graphql  resolve_api.graphql  tips_api.graphql  tracks_api.graphql  users_api.graphql
gql/schemas/model/: user.graphql
src/: db.rs  main.rs  models.ts  query.rs  query_2.rs  query_root.rs
src/entities/: aggregate_daily_app_name_metrics.rs  aggregate_daily_total_users_metrics.rs  aggregate_daily_unique_users_metrics.rs  aggregate_monthly_app_name_metrics.rs  aggregate_monthly_plays.rs  aggregate_monthly_total_users_metrics.rs  aggregate_monthly_unique_users_metrics.rs  aggregate_playlist.rs  aggregate_plays.rs  aggregate_track.rs  aggregate_user.rs  aggregate_user_tips.rs  alembic_version.rs  app_name_metrics.rs  associated_wallets.rs  audio_transactions_history.rs  audius_data_txs.rs  blocks.rs  blocks_copy.rs  challenge_disbursements.rs  challenge_listen_streak.rs  challenge_profile_completion.rs  challenges.rs  chat.rs  chat_blocked_users.rs  chat_member.rs  chat_message.rs  chat_message_reactions.rs  chat_permissions.rs  cid_data.rs  eth_blocks.rs  follows.rs  hourly_play_counts.rs  indexing_checkpoints.rs  milestones.rs  mod.rs  notification.rs  notification_seen.rs  playlist_routes.rs  playlist_seen.rs  (+36 more)
src/queries/: mod.rs  users.rs
src/query/: mod.rs
