[package]
name = "raudius-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0", features = ["chrono", "decimal"] }
async-graphql-axum = "5.0"
axum = { version = "0.6", features = ["headers"] }
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
