[package]
edition = "2021"
name = "raudius-graph"
version = "0.2.0"

[dependencies]
async-graphql = { version = "5.0", features = ["decimal", "chrono", "dataloader"] }
async-trait = { version = "0.1.53" }
dotenv = "0.15.0"
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-tokio-native-tls", "postgres-array"] }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.11" }
